--- a/ExploringWithHTML5/gui.css
+++ b/ExploringWithHTML5/gui.css
@@ -15,21 +15,78 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 header {
-    background-color: rgba(0,0,0,0.6);
-    opacity: 0.6;
+    background-color: black;
+    width: 100%;
+    height: 80px;
+    margin-bottom: 20px;
 }
 body {
-    
+    background-color: gray;
 }
 
 ul {
-    background-color: rgba(0,0,255,0.6);
+    background-color: black;
 }
 
 ul {
-   color: #F00;
+   color: #fff;
+   width: 100%; 
+   height: 80px;
+}
+
+li {
+    display: inline;
+    float: right;
+    padding-right: 25px;
 }
 
 a {
-    color: #F0F;
+    color: FFF;
 }
+
+.img-circle {
+    border-radius: 100%;
+    height: 500px;
+    width: 500px;
+    -moz-border-radius: 100%;
+    -webkit-border-radius: 100%;
+}
+
+.circle {
+    width: 100px;
+    height: 100px;
+    background: rgba(255,0,0,0.6);
+    border-radius: 100%;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+}
+
+.triangle {
+    width: 0px;
+    height: 0px;
+    border-left: 50px solid transparent;
+    border-right: 50px solid transparent;
+    border-bottom: 100px solid rgba(255,0,0,0.6);
+}
+
+.title {
+    color: #00F;
+    font-size: 1.87em;
+    font-family: Arial, Helvetica, sans-serif;
+    align-content: center; 
+    text-align: center;
+    text-shadow: 7px 7px 6px #000;
+    margin-top: 100px;
+       
+}
+
+.video {
+    box-shadow: 20px 20px 15px #000;
+    margin-bottom: 20px;
+    align-content: center;
+    border-style: groove;
+    border-width: 7px;
+    border-color: #0F0;
+
+}
+
